--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
             <nav class="navbar">
-                <div class="container">
+                <div class="container navbar__box">
                     
                     <a href="">
                         <img src="./assets/icon/navbar/navbar-logo.png" alt="">
@@ -36,7 +36,16 @@
                                </select>
                         </li>
                         <li class="navbar__item">
-                            
+                            <a href="">Акции/Сидки</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="">Шоурумы</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="">О нас</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="">Контакты</a>
                         </li>
 
                     </ul>
