--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asia-Decor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
@@ -50,6 +53,10 @@
 
                     </ul>
 
+                    <span class="navbar__hero">
+                        <img src="./assets/icon/navbar/search.png" alt="">
+                        <img src="./assets/icon/navbar/menu.png" alt="">
+                    </span>
 
                 </div>
                
