--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
                     <button>
                         Подробнее
                     </button>
+                    <p>Экслюзивная мебельная фуритура от</p>
+                    <span class="header__span">
+                        <img src="./assets/icon/header/img1.png" alt="">
+                        <img src="./assets/icon/header/img2.png" alt="">
+                        <img src="./assets/icon/header/img3.png" alt="">
+                    </span>
                </li>
-               <li class="header__item"></li>
+               <li class="header__item">
+                <img src="./assets/icon/header/header-img.png" alt="">
+               </li>
                 </ul>
             </div>
     
