--- a/index.html
+++ b/index.html
@@ -86,5 +86,12 @@
     </header>
 
 
+    <main>
+        <section class="section">
+            
+        </section>
+    </main>
+
+
 </body>
 </html>
