--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
     <main>
         <section class="section">
-            
+             <h2 class="section__title">Продукция</h2>
+             
         </section>
     </main>
 
