--- a/index.html
+++ b/index.html
@@ -87,12 +87,15 @@
 
 
     <main>
-        <section class="section">
+        <section class="section container">
              <h2 class="section__title">Продукция</h2>
-             
+               <ul class="section__list"></ul>
         </section>
     </main>
 
 
+
+
 </body>
+<script src="./js/script.js"></script>
 </html>
