--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
              <h2 class="section__title">Продукция</h2>
                <ul class="section__list"></ul>
         </section>
+
+
+        <section class=" uslugi container"> 
+            <div>
+                <h3 class="uslugi__title">
+                    Услуги
+                </h3>
+                <ul class="uslugi__list">
+                    
+                </ul>
+            </div>
+            <img src="./assets/img/section/uslugi.png" alt="">
+        </section>
+
     </main>
 
 
