--- a/katalog.html
+++ b/katalog.html
@@ -114,7 +114,11 @@
                         Ул. Шота Руставели, дом 1/23кв</p>
                  </li>
                  <li>
-                    <span></span>
+                    <span class="footer__img">
+                        <img src="./assets/img/footer/footer1.png" alt="">
+                        <img src="./assets/img/footer/footer2.png" alt="">
+                        <img src="./assets/img/footer/footer3.png" alt="">
+                    </span>
                  </li>
                 </ul>
 
