--- a/katalog.html
+++ b/katalog.html
@@ -123,8 +123,12 @@
                 </ul>
 
             </div>
-            <div class="footer-bottom">
-
+            <div class="footer__bottom">
+                <h4>© 2021 все права защищены</h4>
+                <span>
+                    <p>Разработано </p>
+                    <b>Golden Minds</b>
+                </span>
             </div>
         </div>
     </footer>
