--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <ul class="header__list">
                <li class="header__item">
-                 <h2>Единство в интерьере для создания гармоничного дизайна </h2>
+                 <h2>Единство в интерьередля создания гармоничного дизайна</h2>
                     <button>
                         Подробнее
                     </button>
@@ -98,8 +98,8 @@
                 <h3 class="uslugi__title">
                     Услуги
                 </h3>
-                <ul class="uslugi__list">
-                    
+                <ul  class="uslugi__list">
+                     
                 </ul>
             </div>
             <img src="./assets/img/section/uslugi.png" alt="">
@@ -112,4 +112,5 @@
 
 </body>
 <script src="./js/script.js"></script>
+<script src="./js/utils.js"></script>
 </html>
