--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@
             <nav class="navbar">
                 <div class="container navbar__box">
                     
-                    <a href="">
+                    <a href="./index.html">
                         <img src="./assets/icon/navbar/navbar-logo.png" alt="">
                     </a>
 
                     <ul class="navbar__list">
                         
                         <li class="navbar__item">
-                               <select>
-                                <option value="Каталог"><a href="">Каталог</a></option>
-                                <option value="ЛМДФ "><a href="">ЛМДФ</a> </option>
-                               </select>
+                            <a href="./katalog.html">Каталог</a>
                         </li>
                         <li class="navbar__item">
                                <select>
