--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                      
                 </ul>
             </div>
-            <img src="./assets/img/section/uslugi.png" alt="">
+            <img class="uslugi__img" src="./assets/img/section/uslugi.png" alt="">
         </section>
 
     </main>
