--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
             <img class="uslugi__img" src="./assets/img/section/uslugi.png" alt="">
         </section>
 
+
+
+        <section class="decor">
+            <div class="container">
+                
+            </div>
+        </section>
+
     </main>
 
 
