--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
 
 
         <section class="decor">
-            <div class="container">
-                
+            <div class="container decor__box">
+                <h2 class="decor__title">ПОЧЕМУ ИМЕННО МЫ?</h2>
+                <ul class="decor__list">
+                    
+                </ul>
             </div>
         </section>
 
@@ -118,4 +121,5 @@
 </body>
 <script src="./js/script.js"></script>
 <script src="./js/utils.js"></script>
+<script src="./js/decor.js"></script>
 </html>
