--- a/index.html
+++ b/index.html
@@ -116,6 +116,77 @@
     </main>
 
 
+    
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__topbar">
+                <img src="./assets/icon/navbar/navbar-logo.png" alt="logo">
+                <ul class="footer-list">
+                   <li>
+                    <a href="#">О компании</a>
+                   </li>
+                   <li>
+                    <a href="#">Сертификаты</a>
+                   </li>
+                   <li>
+                    <a href="#">Юридическим лицам</a>
+                   </li>
+                   <li>
+                    <a href="#">Реквизиты</a>
+                   </li>
+                   <li>
+                    <a href="#">Поддержка (FAQ)</a>
+                   </li>
+                </ul>
+
+                <ul class="footer-list">
+                    <li>
+                        <a href="./katalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="#">Как купить</a>
+                    </li>
+                    <li>
+                        <a href="#">Доставка и оплата</a>
+                    </li>
+                    <li>
+                        <a href="#">Возврат продукции </a>
+                    </li>
+                    <li>
+                        <a href="#">Политика конфеденциальности </a>
+                    </li>
+                </ul>
+
+                <ul class="footer-list">
+                 <li>
+                    <a href="tel:+998 90 999 11 11">+998 93 123 45 67</a>
+                 </li>
+                 <li>
+                    <a href="tel:+998 93 123 45 67">+998 93 123 45 67</a>
+                 </li>
+                 <li>
+                    <p>Адрес: Узбекистан, г.Ташкент <br>
+                        Ул. Шота Руставели, дом 1/23кв</p>
+                 </li>
+                 <li>
+                    <span class="footer__img">
+                        <img src="./assets/img/footer/footer1.png" alt="">
+                        <img src="./assets/img/footer/footer2.png" alt="">
+                        <img src="./assets/img/footer/footer3.png" alt="">
+                    </span>
+                 </li>
+                </ul>
+
+            </div>
+            <div class="footer__bottom">
+                <h4>© 2021 все права защищены</h4>
+                <span>
+                    <p>Разработано </p>
+                    <b>Golden Minds</b>
+                </span>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
